# kokoro-tts

./: .gitignore  README.md  flake.nix  pyproject.toml  result
kokoro_tts/: __main__.py
nix/: module.nix
